tests/baselines/reference/contextualTyping5.errors.txt
tests/cases/compiler/contextualTyping5.ts(1,13): error TS2323: Type '{}' is not assignable to type '{ id: number; }'.
  Property 'id' is missing in type '{}'.


==== tests/cases/compiler/contextualTyping5.ts (1 errors) ====
    class foo { public bar:{id:number;} = { }; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Type '{}' is not assignable to type '{ id: number; }'.
!!! error TS2323:   Property 'id' is missing in type '{}'.